# langgraph-deepagents

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml
app/: main.py
app/api/v1/: agents.py
app/core/: agent_factory.py  session_manager.py
app/models/: agents.py
app/server/: config.py  dependencies.py
docs/: adding_agents.md  agent_management.md  agent_template.md  api_reference.md  architecture.md  cli_debugging.md  data_models.md
src/: session.py  z_deep_agent.py  z_state_agent.py
src/agents/: deep_agent.py  stateful_agent.py  stateful_deep_agent.py
tests/integration/: test_api.py
tests/unit/: test_agent_factory.py  test_session_manager.py
